@@ -1030,7 +1030,7 @@ function showInputForm ($session, $values=false) {
         $mailprio, $default_use_mdn, $mdn_user_support, $compose_new_win,
         $saved_draft, $mail_sent, $sig_first, $edit_as_new, $action,
         $username, $composesession, $default_charset, $composeMessage,
-        $javascript_on;
+        $javascript_on, $compose_onsubmit;
 
     if ($javascript_on)
         $onfocus = ' onfocus="alreadyFocused=true;"';
@@ -1064,7 +1064,38 @@ function showInputForm ($session, $values=false) {
 
     echo "\n" . '<form name="compose" action="compose.php" method="post" ' .
         'enctype="multipart/form-data"';
+
+    $compose_onsubmit = array();
     do_hook('compose_form');
+
+    // Plugins that use compose_form hook can add an array entry
+    // to the globally scoped $compose_onsubmit; we add them up
+    // here and format the form tag's full onsubmit handler.
+    // Each plugin should use "return false" if they need to
+    // stop form submission but otherwise should NOT use "return
+    // true" to give other plugins the chance to do what they need
+    // to do; SquirrelMail itself will add the final "return true".
+    // Onsubmit text is enclosed inside of double quotes, so plugins
+    // need to quote accordingly.
+    if ($javascript_on) {
+        if (empty($compose_onsubmit))
+            $compose_onsubmit = array();
+        else if (!is_array($compose_onsubmit))
+            $compose_onsubmit = array($compose_onsubmit);
+
+        $onsubmit_text = '';
+        foreach ($compose_onsubmit as $text) {
+            $text = trim($text);
+            if (!empty($text)) {
+                if (substr($text, -1) != ';' && substr($text, -1) != '}')
+                    $text .= '; ';
+                $onsubmit_text .= $text;
+            }
+        }
+
+        if (!empty($onsubmit_text))
+            echo ' onsubmit="' . $onsubmit_text . ' return true;"';
+    }
 
     echo ">\n";
 
